--- a/iframe.html
+++ b/iframe.html
@@ -14,8 +14,8 @@
 <meta name="google-adsense-account" content="ca-pub-3924388554248092">
 <title>Gaming Escape</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://gr4ys0n.github.io/src/styles.css">
-  <link rel="icon" type="image/x-icon" href="https://Gr4ys0n.github.io/src/images/favicon.jpg">
+<link rel="stylesheet" href="src/styles.css">
+  <link rel="icon" type="image/x-icon" href="src/images/favicon.jpg">
 <style>
 .gamearea {                   
             display: flex;
